Fix percentage routes
