# swagger.yaml
@@ -123,7 +123,7 @@ paths:
         '404':
           description: Not Found
 
-  /trashcan-fill-height/percentage:
+  /percentage:
     get:
       tags:
         - Trashcans
@@ -143,7 +143,7 @@ paths:
                     percentage:
                       type: number
 
-  /trashcan-fill-height/percentage/{trashcanName}:
+  /percentage/{trashcanName}:
     get:
       tags:
         - Trashcans
@@ -168,7 +168,7 @@ paths:
                     type: number
         '404':
           description: Not Found
-  /trashcan-fill-height/percentage/{trashcanName}/statistics:
+  /percentage/{trashcanName}/statistics:
     get:
       tags:
         - Trashcans
